fixed scrollbar issue

--- a/perfectSteak.css
+++ b/perfectSteak.css
@@ -140,8 +140,8 @@ input[type="radio"].toggle-right + label {
 }
 
 .dropdown{
-    overflow:auto;
-	height:70px;
+    overflow:none;
+	height:80px;
 	margin-bottom:3px!important;
 }
 
